@@ -303,7 +303,7 @@ def run_server(parser, opts, mode, xpra_file, extra_args):
 
     # This import is delayed because the module depends on gtk:
     import xpra.server
-    app = xpra.server.XpraServer(upgrading, sockets, opts.password_file, opts.pulseaudio, opts.clipboard)
+    app = xpra.server.XpraServer(upgrading, sockets, opts.password_file, opts.pulseaudio, opts.clipboard, opts.randr)
     def cleanup_socket(self):
         print "removing socket"
         try:
